tests/neg/i16601a.scala
// scalac: -explain

@main def Test: Unit = new concurrent.ExecutionContext  // error